--- a/My Landing Page/thanks.html
+++ b/My Landing Page/thanks.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Refresh" content="3; url='https://tarsogalvao.ddns.net/cv'" />
-    <title>Thank You!</title>
-  </head>
-  <body style="background-color: #1a1b1a;">
-    <h4 style="color: gray;">Thank you for your contact! </h4>
-    <p style="color: gray;">You will be redirected back to the <a href="https://tarsogalvao.ddns.net/cv">home page</a> in 3 seconds.</p>
-  </body>
+
+<head>
+  <!-- <meta http-equiv="Refresh" content="3; url='https://tarsogalvao.ddns.net/cv'" /> -->
+  <title>Thank You!</title>
+</head>
+
+<style>
+  body {
+    background-color: #1a1b1a;
+    color: gray;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .wrapper{
+    margin-top: 50%;
+  }
+  a {
+    color: darkcyan;
+  }
+
+  .icon-holder {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5%;
+  }
+
+  .icon {
+    width: 40%;
+  }
+</style>
+
+<body>
+
+  <header>
+    <div class="wrapper">
+
+      <h2>Thank you for your contact! </h2>
+
+      <div class="icon-holder">
+        <lottie-player class="icon" src="https://assets9.lottiefiles.com/packages/lf20_b4ojt04m.json"
+          background="rgba(0, 0, 0, 0)" speed="1" loop autoplay>
+        </lottie-player>
+      </div>
+
+      <p>You will be redirected back to the
+        <a href="https://tarsogalvao.ddns.net/cv">home page</a> in 3 seconds.
+      </p>
+
+    </div>
+  </header>
+
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+</body>
+
 </html>
