re-added redirect.... duhh

--- a/My Landing Page/thanks.html
+++ b/My Landing Page/thanks.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
-  <!-- <meta http-equiv="Refresh" content="3; url='https://tarsogalvao.ddns.net/cv'" /> -->
+  <meta http-equiv="Refresh" content="3; url='https://tarsogalvao.ddns.net/cv'" />
   <title>Thank You!</title>
 </head>
 
 <style>
-  body {
+  body,
+  .icon-holder{
     background-color: #1a1b1a;
     color: gray;
     display: flex;
@@ -21,15 +22,8 @@
   a {
     color: darkcyan;
   }
-
-  .icon-holder {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 5%;
-  }
-
   .icon {
+    padding: 5%;
     width: 40%;
   }
 </style>
@@ -42,8 +36,10 @@
       <h2>Thank you for your contact! </h2>
 
       <div class="icon-holder">
-        <lottie-player class="icon" src="https://assets9.lottiefiles.com/packages/lf20_b4ojt04m.json"
-          background="rgba(0, 0, 0, 0)" speed="1" loop autoplay>
+        <lottie-player class="icon"
+                        src="https://assets9.lottiefiles.com/packages/lf20_b4ojt04m.json"
+                        background="rgba(0, 0, 0, 0)"
+                        speed="1" loop autoplay>
         </lottie-player>
       </div>
 
