--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -182,6 +182,7 @@
 <br>
 <hr>
 <br>
+        <!--MESSAGE-BOX -->
         <div class="form-container">
             <h4 id="form-title">texts changed in scripts.js</h4>
             <form class="form" action="https://formsubmit.co/84650f89c803d4646b0d3490539ffc29" method="POST">
