--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -65,46 +65,46 @@
             <!-- icons display -->
             <div class="row">
                 <div class="column">
-                    <img class="icons" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" />
+                    <img class="icons" src="img/icons/html5-original-wordmark.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" />
+                    <img class="icons" src="img/icons/css3-original-wordmark.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original-wordmark.svg" />    
+                    <img class="icons" src="img/icons/bootstrap-original-wordmark.svg" />    
                 </div>
                 <div class="column">
-                    <img class="icons" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+                    <img class="icons" src="img/icons/javascript-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" />
+                    <img class="icons" src="img/icons/typescript-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" />
+                    <img class="icons" src="img/icons/react-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" />
+                    <img class="icons" src="img/icons/java-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" />
+                    <img class="icons" src="img/icons/python-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg" />
+                    <img class="icons" src="img/icons/django-plain.svg" />
                 </div>          
                 <div class="column">
-                    <img class="icons" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/godot/godot-original.svg" />
+                    <img class="icons" src="img/icons/godot-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bash/bash-original.svg" /> 
+                    <img class="icons" src="img/icons/bash-original.svg" /> 
                 </div>
                 <div class="column">
-                    <img class="icons" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" />
+                    <img class="icons" src="img/icons/linux-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/raspberrypi/raspberrypi-original.svg" />
+                    <img class="icons" src="img/icons/raspberrypi-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" />
+                    <img class="icons" src="img/icons/git-original.svg" />
                 </div>
             </div>
 
@@ -167,7 +167,7 @@
 
             <!-- card 4 PLAYGROUND -->
             <div class="card-container">
-                <a class="links" href="https://tarsogalvao.ddns.net/games" target="_blank">
+                <a class="links" href="https://tarsogalvao.ddns.net/games">
                     <div class="card-4 card-all">
                         <div class="card-wrapper">
                             <h2>Playground</h2>
