changed heavy images for local lottie jsons

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -132,8 +132,7 @@
                 <a class="links" href="https://github.com/surtarso" target="_blank">
                     <div class="card-1 card-all">
                         <div class="card-wrapper">
-                            <h2>Github</h2>
-                            <p>Click!</p>
+                            <lottie-player src="img/cards/github.json" style="width:360px;" background="transparent" speed="1" loop autoplay></lottie-player>
                         </div>
                     </div>
                 </a>
@@ -144,8 +143,7 @@
                 <a class="links" href="https://www.linkedin.com/in/tarsogalvao" target="_blank">
                     <div class="card-2 card-all">
                         <div class="card-wrapper">
-                            <h2>Linkedin</h2>
-                            <p>Click!</p>
+                            <lottie-player src="img/cards/linkedin.json" style="width:360px;" background="transparent" speed="1" loop autoplay></lottie-player>
                         </div>
                     </div>
                 </a>
@@ -158,8 +156,7 @@
                 <a class="links" href="https://solidserverbr.ddns.net/urcade/" target="_blank">
                     <div class="card-3 card-all">
                         <div class="card-wrapper">
-                            <h2>URCade</h2>
-                            <p>Click!</p>
+                            <lottie-player src="img/cards/urcade.json" style="width:360px;" background="transparent" speed="1" loop autoplay></lottie-player>
                         </div>
                     </div>
                 </a>
@@ -170,8 +167,7 @@
                 <a class="links" href="https://tarsogalvao.ddns.net/games">
                     <div class="card-4 card-all">
                         <div class="card-wrapper">
-                            <h2>Playground</h2>
-                            <p>Click!</p>
+                            <lottie-player src="img/cards/playground.json" style="width:360px;" background="transparent" speed="1" loop autoplay></lottie-player>
                         </div>
                     </div>
                 </a>
@@ -210,5 +206,7 @@
         <script src="src/scripts.js"></script>
         <!-- controls rocket hidden link -->
         <script src="src/rocket.js"></script>
+        <!-- cards animated figures -->
+        <script src="src/lottie-player.js"></script>
     </body>
 </html>
