--- a/My Landing Page/src/thanks.html
+++ b/My Landing Page/src/thanks.html
@@ -34,7 +34,7 @@
       <h2>Thank you for your contact! </h2>
 
       <lottie-player class="icon" src="thanks.json"
-                        background="transparent" speed="1" loop autoplay>
+                        background="transparent" speed="1" autoplay>
       </lottie-player>
 
       <p>You will be redirected back to the
