moved style tags from html to css

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -132,7 +132,7 @@
                 <a class="links" href="https://github.com/surtarso" target="_blank">
                     <div class="card-1 card-all">
                         <div class="card-wrapper">
-                            <lottie-player src="img/cards/github.json" style="width:360px;" background="transparent" speed="1" loop autoplay></lottie-player>
+                            <lottie-player class="card-icon" src="img/cards/github.json" background="transparent" speed="1" loop autoplay></lottie-player>
                         </div>
                     </div>
                 </a>
@@ -143,7 +143,7 @@
                 <a class="links" href="https://www.linkedin.com/in/tarsogalvao" target="_blank">
                     <div class="card-2 card-all">
                         <div class="card-wrapper">
-                            <lottie-player src="img/cards/linkedin.json" style="width:360px;" background="transparent" speed="1" loop autoplay></lottie-player>
+                            <lottie-player class="card-icon" src="img/cards/linkedin.json" background="transparent" speed="1" loop autoplay></lottie-player>
                         </div>
                     </div>
                 </a>
@@ -156,7 +156,7 @@
                 <a class="links" href="https://solidserverbr.ddns.net/urcade/" target="_blank">
                     <div class="card-3 card-all">
                         <div class="card-wrapper">
-                            <lottie-player src="img/cards/urcade.json" style="width:360px;" background="transparent" speed="1" loop autoplay></lottie-player>
+                            <lottie-player class="card-icon" src="img/cards/urcade.json" background="transparent" speed="1" loop autoplay></lottie-player>
                         </div>
                     </div>
                 </a>
@@ -167,7 +167,7 @@
                 <a class="links" href="https://tarsogalvao.ddns.net/games">
                     <div class="card-4 card-all">
                         <div class="card-wrapper">
-                            <lottie-player src="img/cards/playground.json" style="width:360px;" background="transparent" speed="1" loop autoplay></lottie-player>
+                            <lottie-player class="card-icon" src="img/cards/playground.json" background="transparent" speed="1" loop autoplay></lottie-player>
                         </div>
                     </div>
                 </a>
@@ -183,7 +183,7 @@
             <h4 id="form-title">texts changed in scripts.js</h4>
             <form class="form" action="https://formsubmit.co/84650f89c803d4646b0d3490539ffc29" method="POST">
                 <input type="hidden" name="_next" value="https://tarsogalvao.ddns.net/cv/src/thanks.html">
-                <input type="text" name="_honey" style="display:none">
+                <input type="text" name="_honey" class="message-honey">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_subject" value="Mensagem do site!">
 
