--- a/My Landing Page/src/thanks.html
+++ b/My Landing Page/src/thanks.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Refresh" content="3; url='https://tarsogalvao.ddns.net/cv'" />
   <title>Thank You!</title>
 </head>
