fixed scripts for SCP protocol

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" type="image/png" href="favicon.png"/>
-        <link rel="stylesheet" href="src/styles.css">
+        <link rel="stylesheet" type="text/css" href="src/styles.css">
         <title>Tarso Galvão</title>
     </head>
 
@@ -118,7 +118,7 @@
                     <div class="card-0 card-all">
                         <div class="card-iframe">
                             <div>
-                                <iframe id="iFrame" src="https://tarsogalvao.ddns.net/cv/api/api.html?surtarso" scrolling="no"></iframe>
+                                <iframe id="iFrame" src="api/api.html?surtarso" scrolling="no"></iframe>
                             </div>
                         </div>
                     </div>
@@ -203,10 +203,10 @@
         </footer>
 
         <!-- controls mode and language buttons -->
-        <script src="src/scripts.js"></script>
+        <script type="text/javascript" src="src/scripts.js" nonce="rAnd0m123"></script>
         <!-- controls rocket hidden link -->
-        <script src="src/rocket.js"></script>
+        <script type="text/javascript" src="src/rocket.js" nonce="rAnd0m123"></script>
         <!-- cards animated figures -->
-        <script src="src/lottie-player.js"></script>
+        <script type="text/javascript" src="src/lottie-player.js" nonce="rAnd0m123"></script>
     </body>
 </html>
