fixed CSP errors

--- a/My Landing Page/src/thanks.html
+++ b/My Landing Page/src/thanks.html
@@ -5,29 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Refresh" content="3; url='https://tarsogalvao.ddns.net/cv'" />
+  <link rel="stylesheet" type="text/css" href="thanks.css">
   <title>Thank You!</title>
 </head>
-
-<style>
-  body{
-    background-color: #1a1b1a;
-  }
-  .wrapper{
-    color: gray;
-    display: block;
-    overflow: hidden;
-    text-align: center;
-    padding: 50px;
-  }
-  a {
-    color: darkcyan;
-  }
-  p{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-  }
-</style>
 
 <body>
 
@@ -45,7 +25,7 @@
 
     </div>
 
-  <script src="lottie-player.js"></script>
+  <script src="lottie-player.js" type="text/javascript" nonce="rAnd0m123"></script>
 </body>
 
 </html>
