added mime and function refactor

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -15,8 +15,8 @@
 
             <div>
                 <!-- mode/lang corner buttons -->
-                <button id="mode-selector">Black Hole</button>
-                <button id="lang-selector">pt-BR</button>
+                <button id="mode-selector">texts changed in scripts.js</button>
+                <button id="lang-selector">texts changed in scripts.js</button>
                 
                 <!-- corner menu -->
                 <div class="checkbox-container">
@@ -56,55 +56,55 @@
             </div>
 
             <!-- Header main image + name text-->
-            <img class="header-image" src="img/me.gif">
+            <img class="header-image" src="img/me.gif" type="image/gif">
             <h1>Tarso Galvão</h1>
             <h3 id="ht">texts changed in scripts.js</h3>
             <!-- rocket -->
-            <a id="rocket"><img src="./img/rocket.webp" id="Rocket"></a>
+            <a id="rocket"><img src="img/rocket.webp" type="image/webp" id="Rocket"></a>
 
             <!-- icons display -->
             <div class="row">
                 <div class="column">
-                    <img class="icons" src="img/icons/html5-original-wordmark.svg" />
+                    <img class="icons" type="image/svg+xml" src="img/icons/html5-original-wordmark.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="img/icons/css3-original-wordmark.svg" />
+                    <img class="icons" type="image/svg+xml" src="img/icons/css3-original-wordmark.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="img/icons/bootstrap-original-wordmark.svg" />    
+                    <img class="icons" type="image/svg+xml" src="img/icons/bootstrap-original-wordmark.svg" />    
                 </div>
                 <div class="column">
-                    <img class="icons" src="img/icons/javascript-original.svg" />
+                    <img class="icons" type="image/svg+xml" src="img/icons/javascript-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="img/icons/typescript-original.svg" />
+                    <img class="icons" type="image/svg+xml" src="img/icons/typescript-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="img/icons/react-original.svg" />
+                    <img class="icons" type="image/svg+xml" src="img/icons/react-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="img/icons/java-original.svg" />
+                    <img class="icons" type="image/svg+xml" src="img/icons/java-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="img/icons/python-original.svg" />
+                    <img class="icons" type="image/svg+xml" src="img/icons/python-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="img/icons/django-plain.svg" />
+                    <img class="icons" type="image/svg+xml" src="img/icons/django-plain.svg" />
                 </div>          
                 <div class="column">
-                    <img class="icons" src="img/icons/godot-original.svg" />
+                    <img class="icons" type="image/svg+xml" src="img/icons/godot-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="img/icons/bash-original.svg" /> 
+                    <img class="icons" type="image/svg+xml" src="img/icons/bash-original.svg" /> 
                 </div>
                 <div class="column">
-                    <img class="icons" src="img/icons/linux-original.svg" />
+                    <img class="icons" type="image/svg+xml" src="img/icons/linux-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="img/icons/raspberrypi-original.svg" />
+                    <img class="icons" type="image/svg+xml" src="img/icons/raspberrypi-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" src="img/icons/git-original.svg" />
+                    <img class="icons" type="image/svg+xml" src="img/icons/git-original.svg" />
                 </div>
             </div>
 
