--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -107,6 +107,7 @@
                     <img class="icons" type="image/svg+xml" src="img/icons/git-original.svg" />
                 </div>
             </div>
+        <canvas id="Canvas"></canvas>
 
         </header>
 
@@ -180,6 +181,7 @@
 <br>
         <!--MESSAGE-BOX -->
         <div class="form-container">
+            
             <h4 id="form-title">texts changed in scripts.js</h4>
             <form class="form" action="https://formsubmit.co/84650f89c803d4646b0d3490539ffc29" method="POST">
                 <input type="hidden" name="_next" value="https://tarsogalvao.ddns.net/cv/src/thanks.html">
@@ -192,6 +194,7 @@
                 <textarea class="form-message" name="message" required placeholder="message"></textarea>
                 <button class="form-btn" type="submit">texts changed in scripts.js</button>
             </form>
+
         </div>
 
 
@@ -208,5 +211,7 @@
         <script type="text/javascript" src="src/rocket.js" nonce="rAnd0m123"></script>
         <!-- cards animated figures -->
         <script type="text/javascript" src="src/lottie-player.js" nonce="rAnd0m123"></script>
+        <!-- canvas -->
+        <!-- <script type="text/javascript" src="src/canvas.js" nonce="rAnd0m123"></script> -->
     </body>
 </html>
