added flask icon, added rolling text on header

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -89,6 +89,9 @@
                     <img class="icons" type="image/svg+xml" src="img/icons/python-original.svg" />
                 </div>
                 <div class="column">
+                    <img class="icons" type="image/svg+xml" src="img/icons/flask-original.svg" />
+                </div>
+                <div class="column">
                     <img class="icons" type="image/svg+xml" src="img/icons/django-plain.svg" />
                 </div>          
                 <div class="column">
