removed extra script, added its code to scripts.js

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -58,6 +58,7 @@
             <!-- Header main image + name text-->
             <img class="header-image" src="img/me.gif" type="image/gif">
             <h1>Tarso Galvão</h1>
+            <!-- job description -->
             <h3 id="ht">texts changed in scripts.js</h3>
             <!-- rocket -->
             <a id="rocket"><img src="img/rocket.webp" type="image/webp" id="Rocket"></a>
@@ -110,6 +111,8 @@
                     <img class="icons" type="image/svg+xml" src="img/icons/git-original.svg" />
                 </div>
             </div>
+
+        <!-- canvas testing ground -->    
         <canvas id="Canvas"></canvas>
 
         </header>
@@ -200,19 +203,15 @@
 
         </div>
 
-
-
         <!-- FOOTER -->
         <footer class="footer">
             <a href="mailto:tarso.galvao@gmail.com">Webmaster: Tarso Galvão</a>
             <p>. Powered by HTML5, CSS and Javascript.</p>
         </footer>
 
-        <!-- controls mode and language buttons -->
+        <!-- mode and language buttons toggler, rocket control -->
         <script type="text/javascript" src="src/scripts.js" nonce="rAnd0m123"></script>
-        <!-- controls rocket hidden link -->
-        <script type="text/javascript" src="src/rocket.js" nonce="rAnd0m123"></script>
-        <!-- cards animated figures -->
+        <!-- cards animated figures (json player)-->
         <script type="text/javascript" src="src/lottie-player.js" nonce="rAnd0m123"></script>
         <!-- canvas -->
         <!-- <script type="text/javascript" src="src/canvas.js" nonce="rAnd0m123"></script> -->
