added icon tooltips

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -66,49 +66,49 @@
             <!-- icons display -->
             <div class="row">
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" src="img/icons/html5-original-wordmark.svg" />
+                    <img class="icons" type="image/svg+xml" title="HTML 5" src="img/icons/html5-original-wordmark.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" src="img/icons/css3-original-wordmark.svg" />
+                    <img class="icons" type="image/svg+xml" title="CSS 3" src="img/icons/css3-original-wordmark.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" src="img/icons/bootstrap-original-wordmark.svg" />    
+                    <img class="icons" type="image/svg+xml" title="Bootstrap" src="img/icons/bootstrap-original-wordmark.svg" />    
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" src="img/icons/javascript-original.svg" />
+                    <img class="icons" type="image/svg+xml" title="Javascript" src="img/icons/javascript-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" src="img/icons/typescript-original.svg" />
+                    <img class="icons" type="image/svg+xml" title="Typescript" src="img/icons/typescript-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" src="img/icons/react-original.svg" />
+                    <img class="icons" type="image/svg+xml" title="React.js" src="img/icons/react-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" src="img/icons/java-original.svg" />
+                    <img class="icons" type="image/svg+xml" title="Java" src="img/icons/java-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" src="img/icons/python-original.svg" />
+                    <img class="icons" type="image/svg+xml" title="Python" src="img/icons/python-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" src="img/icons/flask-original.svg" />
+                    <img class="icons" type="image/svg+xml" title="Flask" src="img/icons/flask-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" src="img/icons/django-plain.svg" />
+                    <img class="icons" type="image/svg+xml" title="Django" src="img/icons/django-plain.svg" />
                 </div>          
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" src="img/icons/godot-original.svg" />
+                    <img class="icons" type="image/svg+xml" title="Godot Engine" src="img/icons/godot-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" src="img/icons/bash-original.svg" /> 
+                    <img class="icons" type="image/svg+xml" title="Born Again Shell" src="img/icons/bash-original.svg" /> 
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" src="img/icons/linux-original.svg" />
+                    <img class="icons" type="image/svg+xml" title="Debian Linux" src="img/icons/linux-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" src="img/icons/raspberrypi-original.svg" />
+                    <img class="icons" type="image/svg+xml" title="Raspberry Pi" src="img/icons/raspberrypi-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" src="img/icons/git-original.svg" />
+                    <img class="icons" type="image/svg+xml" title="Git/Github" src="img/icons/git-original.svg" />
                 </div>
             </div>
 
