--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" type="image/png" href="favicon.png"/>
-        <link rel="stylesheet" type="text/css" href="src/styles.css">
+        <link rel="stylesheet" type="text/css" href="src/css/styles.css">
         <title>Tarso Galvão</title>
     </head>
 
@@ -190,7 +190,7 @@
             
             <h4 id="form-title">texts changed in scripts.js</h4>
             <form class="form" action="https://formsubmit.co/84650f89c803d4646b0d3490539ffc29" method="POST">
-                <input type="hidden" name="_next" value="https://tarsogalvao.ddns.net/cv/src/thanks.html">
+                <input type="hidden" name="_next" value="https://tarsogalvao.ddns.net/cv/thanks/thanks.html">
                 <input type="text" name="_honey" class="message-honey">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_subject" value="Mensagem do site!">
@@ -210,10 +210,10 @@
         </footer>
 
         <!-- mode and language buttons toggler, rocket control -->
-        <script type="text/javascript" src="src/scripts.js" nonce="rAnd0m123"></script>
+        <script type="text/javascript" src="src/js/scripts.js" nonce="rAnd0m123"></script>
         <!-- cards animated figures (json player)-->
-        <script type="text/javascript" src="src/lottie-player.js" nonce="rAnd0m123"></script>
+        <script type="text/javascript" src="src/js/lottie-player.js" nonce="rAnd0m123"></script>
         <!-- canvas -->
-        <!-- <script type="text/javascript" src="src/canvas.js" nonce="rAnd0m123"></script> -->
+        <!-- <script type="text/javascript" src="src/js/canvas.js" nonce="rAnd0m123"></script> -->
     </body>
 </html>
