--- a/My Landing Page/thanks/thanks.html
+++ b/My Landing Page/thanks/thanks.html
@@ -25,7 +25,7 @@
 
     </div>
 
-  <script src="lottie-player.js" type="text/javascript" nonce="rAnd0m123"></script>
+  <script src="../src/js/lottie-player.js" type="text/javascript" nonce="rAnd0m123"></script>
 </body>
 
 </html>
