--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -190,7 +190,7 @@
             
             <h4 id="form-title">texts changed in scripts.js</h4>
             <form class="form" action="https://formsubmit.co/84650f89c803d4646b0d3490539ffc29" method="POST">
-                <input type="hidden" name="_next" value="https://tarsogalvao.ddns.net/cv/thanks/thanks.html">
+                <input type="hidden" name="_next" value="https://tarsogalvao.ddns.net/cv/thanks.html">
                 <input type="text" name="_honey" class="message-honey">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_subject" value="Mensagem do site!">
