--- a/My Landing Page/thanks.html
+++ b/My Landing Page/thanks.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Refresh" content="3; url='https://tarsogalvao.ddns.net/cv'" />
-  <link rel="stylesheet" type="text/css" href="thanks.css">
+  <link rel="stylesheet" type="text/css" href="src/css/thanks.css">
   <title>Thank You!</title>
 </head>
 
@@ -15,7 +15,7 @@
 
       <h2>Thank you for your contact! </h2>
 
-      <lottie-player class="icon" src="thanks.json"
+      <lottie-player class="icon" src="src/thanks.json"
                         background="transparent" speed="1" autoplay>
       </lottie-player>
 
@@ -25,7 +25,7 @@
 
     </div>
 
-  <script src="../src/js/lottie-player.js" type="text/javascript" nonce="rAnd0m123"></script>
+  <script src="src/js/lottie-player.js" type="text/javascript" nonce="rAnd0m123"></script>
 </body>
 
 </html>
