--- a/My Landing Page/thanks.html
+++ b/My Landing Page/thanks.html
@@ -15,7 +15,7 @@
 
       <h2>Thank you for your contact! </h2>
 
-      <lottie-player class="icon" src="src/thanks.json"
+      <lottie-player class="icon" src="img/thanks.json"
                         background="transparent" speed="1" autoplay>
       </lottie-player>
 
