--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -181,28 +181,29 @@
                 <div id="card-4" class="card-text">texts changed in scripts.js</div>
             </div>
 
-        </main>
-<br>
-<hr>
-<br>
+        
+
         <!--MESSAGE-BOX -->
-        <div class="form-container">
-            
-            <h4 id="form-title">texts changed in scripts.js</h4>
-            <form class="form" action="https://formsubmit.co/84650f89c803d4646b0d3490539ffc29" method="POST">
-                <input type="hidden" name="_next" value="https://tarsogalvao.ddns.net/cv/thanks.html">
-                <input type="text" name="_honey" class="message-honey">
-                <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_subject" value="Mensagem do site!">
+        <div class="msgbox-wrapper">
+            <div class="form-container">
+                <form class="form" action="https://formsubmit.co/84650f89c803d4646b0d3490539ffc29" method="POST">
+                    <input type="hidden" name="_next" value="https://tarsogalvao.ddns.net/cv/thanks.html">
+                    <input type="text" name="_honey" class="message-honey">
+                    <input type="hidden" name="_captcha" value="false">
+                    <input type="hidden" name="_subject" value="Mensagem do site!">
+                    <input class="form-input" type="text" name="name" required placeholder="name">
+                    <input class="form-input" type="email" name="email" required placeholder="email">
+                    <textarea class="form-message" name="message" required placeholder="message"></textarea>
+                    <button class="form-btn" type="submit">texts changed in scripts.js</button>
+                </form>
+            </div>
 
-                <input class="form-input" type="text" name="name" required placeholder="name">
-                <input class="form-input" type="email" name="email" required placeholder="email">
-                <textarea class="form-message" name="message" required placeholder="message"></textarea>
-                <button class="form-btn" type="submit">texts changed in scripts.js</button>
-            </form>
-
+            <div class="form-container">
+                <lottie-player class="card-icon" src="img/working.json" background="transparent" speed="1" loop autoplay></lottie-player>
+            </div>          
         </div>
 
+    </main>
         <!-- FOOTER -->
         <footer class="footer">
             <a href="mailto:tarso.galvao@gmail.com">Webmaster: Tarso Galvão</a>
